Updated Transactions Search

--- a/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
@@ -104,7 +104,7 @@
                                 <a ng-class="{'active': hc.checkActive('SubmitTransactions')}" ng-href="/Transactions/SubmitTransactions">Submit Transaction</a>
                             </li>
                             <li>
-                                <a ng-class="{'active': hc.checkActive('TransactionsSearch')}" ng-href="/Transactions/TransactionsSearch">View Transactions</a>
+                                <a ng-class="{'active': hc.checkActive('TransactionsSearch')}" ng-href="/Transactions/TransactionsSearch">Transactions Search</a>
                             </li>
                         </ul>
                     </li>
@@ -124,11 +124,11 @@
                                     <a ng-class="{'active': hc.checkActive('OfferingReport')}" ng-href="/Reporting/OfferingReport">Offerings</a>
                                 </li>*@
                             @*<li>
-                                <a ng-class="{'active': hc.checkActive('DonationReport')}" ng-href="/Reporting/DonationReport">Donations</a>
-                            </li>*@
-                            <li>
+                                    <a ng-class="{'active': hc.checkActive('DonationReport')}" ng-href="/Reporting/DonationReport">Donations</a>
+                                </li>*@
+                            @*<li>
                                 <a ng-class="{'active': hc.checkActive('Transactions')}" ng-href="/Reporting/TransactionsReport">Transactions</a>
-                            </li>
+                            </li>*@
                             <li>
                                 <a ng-class="{'active': hc.checkActive('FinancialSummary')}" ng-href="/Reporting/FinancialSummary">Financial Summary</a>
                             </li>
