Updated Member Search

--- a/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
@@ -48,7 +48,7 @@
                                 <a ng-class="{'active': hc.checkActive('AddMembership')}" ng-href="/Membership/AddMembership">Add Membership</a>
                             </li>
                             <li>
-                                <a ng-class="{'active': hc.checkActive('MembersSearch')}" ng-href="/Membership/MembersSearch">View Membership</a>
+                                <a ng-class="{'active': hc.checkActive('MembersSearch')}" ng-href="/Membership/MembersSearch">Membership Search</a>
                             </li>
                         </ul>
                     </li>
@@ -127,8 +127,8 @@
                                     <a ng-class="{'active': hc.checkActive('DonationReport')}" ng-href="/Reporting/DonationReport">Donations</a>
                                 </li>*@
                             @*<li>
-                                <a ng-class="{'active': hc.checkActive('Transactions')}" ng-href="/Reporting/TransactionsReport">Transactions</a>
-                            </li>*@
+                                    <a ng-class="{'active': hc.checkActive('Transactions')}" ng-href="/Reporting/TransactionsReport">Transactions</a>
+                                </li>*@
                             <li>
                                 <a ng-class="{'active': hc.checkActive('FinancialSummary')}" ng-href="/Reporting/FinancialSummary">Financial Summary</a>
                             </li>
