--- a/ChurchResourceManagerWeb/Views/Membership/_memberInformation.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_memberInformation.cshtml
@@ -1,6 +1,6 @@
 ﻿<form id="mic.personalInfoMainForm" name="mic.personalInfoMainForm" novalidate autocomplete="off" ng-submit="mic.submit(mic.memberInfoArray, mic.personalInfoMainForm)">
     <div class="row">
-        <div class="col-xs-8" @*style="padding-left: 3%;"*@>
+        <div class="col-xs-11">
             <div ng-repeat="info in mic.memberInfoArray track by $index">
                 <div style="padding-bottom: 1%; padding-left: 3%;" ng-show="mic.beingEdited">
                     <ng-form id="memberInfoForm" name="memberInfoForm">
