--- a/ChurchResourceManagerWeb/Views/Membership/_contactInformation.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_contactInformation.cshtml
@@ -46,7 +46,7 @@
                                 </div>
                             </uib-accordion>
                             <div style="padding-top: 1%; padding-left: .5%;" ng-if="cic.followLastCurrentActiveIndex($index, cic.contactInfo.length)">
-                                <button id="submitFamilyBtn" name="submitFamilyBtn" class="btn btn-default" type="submit" ng-disabled="!cic.beingEdited">
+                                <button id="submitFamilyBtn" name="submitFamilyBtn" class="btn btn-primary" type="submit" ng-disabled="!cic.beingEdited">
                                     <span class="glyphicon glyphicon-check"></span> Save
                                 </button>
                             </div>
