--- a/ChurchResourceManagerWeb/Views/Membership/_family.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_family.cshtml
@@ -18,7 +18,7 @@
         <button id="editFamilyBtn" name="editFamilyBtn" class="btn btn-default" type="button" ng-click="fc.edit()" ng-if="!fc.beingEdited">
             <span class="glyphicon glyphicon-edit"></span> Edit
         </button>
-        <button id="submitFamilyBtn" name="submitFamilyBtn" class="btn btn-default" type="submit" ng-if="fc.beingEdited">
+        <button id="submitFamilyBtn" name="submitFamilyBtn" class="btn btn-primary" type="submit" ng-if="fc.beingEdited">
             <span class="glyphicon glyphicon-check"></span> Save
         </button>
     </div>
