--- a/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
@@ -132,6 +132,9 @@
                             <li>
                                 <a ng-class="{'active': hc.checkActive('FinancialSummary')}" ng-href="/Reporting/FinancialSummary">Financial Summary</a>
                             </li>
+                            <li>
+                                <a ng-class="{'active': hc.checkActive('DonationsLetter')}" ng-href="/Reporting/DonationsLetter">Donations Letters</a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
