--- a/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
@@ -133,7 +133,7 @@
                                 <a ng-class="{'active': hc.checkActive('FinancialSummary')}" ng-href="/Reporting/FinancialSummary">Financial Summary</a>
                             </li>
                             <li>
-                                <a ng-class="{'active': hc.checkActive('DonationsLetter')}" ng-href="/Reporting/DonationsLetter">Donations Letters</a>
+                                <a ng-class="{'active': hc.checkActive('TaxLetters')}" ng-href="/Reporting/MemberTaxLetter">Generate Tax Letters</a>
                             </li>
                         </ul>
                     </li>
