Updated tax letter no results

--- a/ChurchResourceManagerWeb/Views/Reporting/MemberTaxLetter.cshtml
+++ b/ChurchResourceManagerWeb/Views/Reporting/MemberTaxLetter.cshtml
@@ -1,4 +1,4 @@
-﻿<page-header page-title="Donations Letter"></page-header>
+﻿<page-header page-title="Generate Tax Letters"></page-header>
 
 
 <div ng-controller="memberTaxLetterController as mtlc">
