Added spinner for tax letter

--- a/ChurchResourceManagerWeb/Views/Reporting/MemberTaxLetter.cshtml
+++ b/ChurchResourceManagerWeb/Views/Reporting/MemberTaxLetter.cshtml
@@ -6,7 +6,7 @@
     <reporting-tabs report-type="TaxLetters" go-button="mtlc.getMemberTithesLetter(searchType, startDate, endDate, familyId, memberId)"
                     no-results-found="mtlc.noResults" reset-tabs="mtlc.resetSearch()" selected-search-type="DonationDate" active-tab="3">
     </reporting-tabs>
-
+    <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-1"></span>
 </div>
 
 
